--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@polymer/iron-pages": "^3.0.0-pre.19",
     "@polymer/lit-element": "^0.5.1",
     "@polymer/paper-icon-button": "^3.0.0-pre.19",
+    "@polymer/paper-spinner": "^3.0.0-pre.19",
     "@polymer/polymer": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "moment": "^2.22.2"
