Create .nojekyll file and update some dependencies
Seems like that the .nojekyll file is required to GitHub Pages
serve files under the node_modules directory

--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "homepage": "https://blog.pauloalexandre.com",
   "dependencies": {
-    "@polymer/app-layout": "^3.0.0-pre.19",
-    "@polymer/app-route": "^3.0.0-pre.19",
-    "@polymer/iron-icons": "^3.0.0-pre.19",
-    "@polymer/iron-list": "^3.0.0-pre.19",
-    "@polymer/iron-pages": "^3.0.0-pre.19",
-    "@polymer/lit-element": "^0.5.1",
-    "@polymer/paper-icon-button": "^3.0.0-pre.19",
-    "@polymer/paper-spinner": "^3.0.0-pre.19",
-    "@polymer/polymer": "^3.0.2",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
-    "moment": "^2.22.2",
-    "prismjs": "^1.14.0"
+    "@polymer/app-layout": "^3.0.2",
+    "@polymer/app-route": "^3.0.2",
+    "@polymer/iron-icons": "^3.0.1",
+    "@polymer/iron-list": "^3.0.1",
+    "@polymer/iron-pages": "^3.0.1",
+    "@polymer/lit-element": "^0.5.2",
+    "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-spinner": "^3.0.1",
+    "@polymer/polymer": "^3.1.0",
+    "@webcomponents/webcomponentsjs": "^2.2.7",
+    "moment": "^2.24.0",
+    "prismjs": "^1.15.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
